--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BABY TRUMP</title>
+    <title>BOBCAT</title>
     <!-- Add your CSS framework, e.g., CDN link for Tailwind CSS -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 
@@ -21,7 +21,7 @@
 
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.8/clipboard.min.js"></script>
-    <link rel="icon" type="image/x-icon" href="images/header.png">
+    <link rel="icon" type="image/x-icon" href="images/20240403_150616.png">
 
 </head>
 
@@ -31,12 +31,12 @@
     <nav class="nav-main ">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
             <a href="" class="flex items-center space-x-3 rtl:space-x-reverse">
-                <img src="images/header.png" class="h-12 rounded-full md:h-14" alt="etf" />
+                <img src="images/20240403_150616.png" class="h-12 rounded-full md:h-14" alt="etf" />
                 <span class=" md:hidden lg:block text-lg md:text-3xl font-extrabold whitespace-nowrap text-blue-500"
                     style="background-image: linear-gradient(to right, rgb(150, 24, 182), violet);
                 color: transparent;
                 -webkit-background-clip: text; /* For Safari and older versions of Chrome */
-                background-clip: text;">BABY TRUMP</span>
+                background-clip: text;">BOBCAT</span>
             </a>
             <button data-collapse-toggle="navbar-default" type="button" style="color: cyan;"
                 class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-white rounded-sm md:hidden hover:bg-cyan-500  "
@@ -71,7 +71,7 @@
                     <li>
                         <a href="#partners"
                             class="violet block py-2 px-3 text-white text-lg lg:text-xl rounded hover:text-pink-500 md:hover:bg-transparent md:border-0 md:hover:text-pink-500 md:p-0  ">
-                            <i class="bx bx-map-alt"></i> PARTNERS</a>
+                            <i class="bx bx-map-alt"></i> ROADMAP</a>
                     </li>
                     <li>
                         <a href="#social"
@@ -83,7 +83,7 @@
 
 
             <div class="my-2 md:block md:w-auto hidden" id="navbar-default-btn">
-                <a href="https://t.me/BabyTrumpGlobal" class="">
+                <a href="https://t.me/BobcatOnSol" class="">
                     <button type="button"
                         class="text-white bg-black hover:bg-white hover:text-black border border-white focus:outline-none focus:ring-4 focus:ring-white font-medium rounded-full text-sm px-5 py-2.5 me-2 mb-2 ">
                         Join the community
@@ -108,10 +108,9 @@
                     <span class="text-center text-4xl lg:text-7xl text-cyan-500 glow-text" style="background-image: linear-gradient(to right, cyan, violet);
                     color: transparent;
                     -webkit-background-clip: text;
-                    background-clip: text;">BABY TRUMP</span>
+                    background-clip: text;">BOBCAT</span>
                 </h1>
-                <a href="https://pancakeswap.finance/swap?outputCurrency=0xbEF1a4b285274B64876f61dB5cCF07E439312D43"
-                    class="w-full md:w-1/2 lg:w-1/2">
+                <a href=" " class="w-full md:w-1/2 lg:w-1/2">
                     <button type="button"
                         class="text-white flex justify-center gap-x-2 items-center  w-full bg-black hover:bg-white hover:text-black border border-white focus:outline-none focus:ring-4 focus:ring-white font-medium rounded-full text-lg px-5 py-2.5 me-2 mb-2 ">
                         BUY
@@ -128,7 +127,7 @@
                     <div id="hs-clipboard-basic" class=" text-white border border-blue-500 rounded-lg w-1/2 md:w-1/2">
                         <input id="hs-clipboard-input" type="text"
                             class="py-3 px-4 block rounded-lg text-sm w-full md:w-full placeholder:text-white focus:border-blue-500 focus:ring-blue-500 bg-gray-900 border-gray-700"
-                            value="0xbEF1a4b285274B64876f61dB5cCF07E439312D43">
+                            value="Would be Available At launch">
                     </div>
                     <button type="button"
                         class="js-clipboard p-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-blue-500 bg-gray-500 text-white shadow-sm hover:bg-blue-600 disabled:opacity-50 disabled:pointer-events-none dark:bg-slate-900 dark:border-gray-700 dark:text-white dark:hover:bg-gray-800 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
@@ -149,12 +148,13 @@
                         <span class="copy-text">copy</span>
                     </button>
                 </div>
-                <a href="https://app.analytixaudit.com/baby-trump">
-                    <p class="text-xl lg:text-2xl text-white underline">AUDIT</p>
+                <a href="">
+                    <p class="text-xl lg:text-2xl text-white underline"></p>
                 </a>
             </div>
             <div class="main-logo  w-80 md:96 lg:w-1/2 ">
-                <img class="imglogo" src="images/header.png" alt="Animated etf logo">
+                <img class="imglogo" src="images/Bob_cat_20240403-145241_edited-removebg-preview.png"
+                    alt="Animated etf logo">
             </div>
         </div>
 
@@ -211,22 +211,24 @@
     <section id="about" class="shadow-2xl py-16">
         <div class="flex flex-col items-center justify-center mx-5 lg:mx-20 gap-5">
             <p class="text-4xl lg:text-5xl font-extrabold text-center text-white ">Introducing
-                BABY TRUMP ($BABYTRUMP)</p>
+                BOBCAT ($BOB)</p>
             <div class="hero lg:h-screen flex flex-col-reverse justify-between lg:flex-row items-center mx-5 lg:mx-10">
                 <div class="main-logo about-logo w-fill lg:w-1/3 rounded-full mt-8">
-                    <img src="images/header.png" alt="Animated" />
+                    <img src="images/Bob_cat_20240403-145241_edited-removebg-preview.png" alt="Animated" />
                 </div>
                 <div class="main-head text-white w-full lg:w-1/2 flex flex-col ">
                     <div class="flex flex-col lg:flex-row items-center justify-center ">
                         <p
                             class="about-context about-text text-gray-300 mx-2 md:mx-12 text-left md:text-left md:text-xl lg:text-2xl mt-5  flex flex-col">
                             <span>
-                                Baby Trump is a community made and owned Crypto currency project. We are aspiring to
-                                become the new high quality standard within the Crypto Space. A group of like minded
-                                individuals have come together to create the new golden standard of what a community
-                                should have to offer. We have a 5% tax on both buy and sell orders.
-                                We are in no way affiliated with Trump or the Trump family. However, we will be donating
-                                5% of our marketing budget to the Trump campaign.
+                                Bob Cat is a token inspired by both "BOB THE BUILDER" and the popular "POP CAT" is a cat
+                                fun and lighthearted narrative to bring cat lovers all over the world together to share
+                                cat-related content and support cat-related causes.
+                                It's a meme-able twist for pop cat , but Bob cat is not just a fun cat . Just like "Bob
+                                the builder", Bob cat is a cat token that serves as the doctor to other cats .
+                                Bob cat token is an idea to fund cat shelters or other animal welfare initiatives.
+                                Join the Bob cat army now to take care of cats around the world while having so much fun
+                                😊
                             </span>
                         </p>
                     </div>
@@ -246,12 +248,12 @@
                 <!-- Total Supply -->
                 <div class="token1 p-6 border-4 border-white rounded-lg shadow-2xl">
                     <h1 class="text-3xl font-bold mb-4 text-white">Total Supply</h1>
-                    <p class="tok pt-5">5555555555555555 Baby Trump </p>
+                    <p class="tok pt-5">1,000,000,000 $BOB </p>
                 </div>
                 <!-- Initial Liquidity -->
                 <div class="token2 p-6 border-4 border-white rounded-lg shadow-md">
                     <h1 class="text-3xl font-bold mb-4 text-white">Tax</h1>
-                    <p class="tok   pt-5">5/5</p>
+                    <p class="tok   pt-5">0/0</p>
                 </div>
                 <!-- addd -->
                 <div class="token3 p-6 border-4 border-white rounded-lg shadow-md">
@@ -262,7 +264,7 @@
                         <div id="hs-clipboard-basic" class=" text-white border  rounded-lg w-full ">
                             <input id="hs-clipboard-input" type="text"
                                 class="py-3 px-4 block rounded-lg text-sm w-full md:w-full placeholder:text-white  bg-black"
-                                value="0xbEF1a4b285274B64876f61dB5cCF07E439312D43">
+                                value="Would be Available At launch">
                         </div>
                         <button type="button"
                             class="js-clipboard p-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border text-white shadow-sm disabled:opacity-50 disabled:pointer-events-none "
@@ -294,7 +296,7 @@
         <div class="container mx-auto text-center p-5 lg:pb-20">
             <div
                 class="token1 flex flex-col-reverse md:flex-row items-center justify-center lg:justify-start mx-4 md:mx-6 lg:mx-8">
-                <h1 class="token text-5xl lg:text-7xl font-extrabold mb-8 text-white ">Partners</h1>
+                <h1 class="token text-5xl lg:text-7xl font-extrabold mb-8 text-white ">Roadmap</h1>
                 <img class="w-32 md:w-42 lg:w-64 px-5" src="images/partner.png" alt="">
             </div>
 
@@ -309,7 +311,9 @@
                                 <img class="w-32 lg:w-64 " src="images/partners/pink.png" alt="">
                             </div>
                             <div class="flex justify-center items-center">
-                                <p class="text-3xl lg:text-7xl text-white">PinkSale</p>
+                                <p class="text-3xl lg:text-7xl text-white">PinkSale
+
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -341,15 +345,15 @@
 
             <div class="social w-full md:w-1/2 mx-4 px-4">
                 <h1 class="text-center md:text-left text-3xl lg:text-5xl font-extrabold mb-8 text-white ">Follow
-                    BABY TRUMP on social media</h1>
+                    BOBCAT on social media</h1>
                 <div class="flex items-center justify-center md:justify-start gap-4 ">
-                    <a href="https://t.me/BabyTrumpGlobal">
-                        <img class="w-24 transform hover:scale-110 transition duration-200" src="images/social_tg.png"
+                    <a href="https://t.me/BobcatOnSol">
+                        <img class="w-24 transform hover:scale-110 transition duration-200" src="images/2111646.png"
                             alt="">
                     </a>
-                    <a href="https://twitter.com/BabyTrumpBSC_">
-                        <img class="w-24 transform hover:scale-110 transition duration-200" src="images/social_x.png"
-                            alt="">
+                    <a href="https://x.com/Bobcat_Solcat?t=gZojD0VXL5MWLqEAmF4WLA&s=09">
+                        <img class="w-24 transform hover:scale-110 transition duration-200"
+                            src="images/pngimg.com - twitter_PNG20.png" alt="">
                     </a>
                     <a href="">
                         <img class="w-24 transform hover:scale-110 transition duration-200"
@@ -366,7 +370,7 @@
     <footer class="bg-gray-900 text-white py-4 text-center mt-10">
         <div class="container mx-auto">
             <!-- Disclaimer, social media icons, copyright here -->
-            <p class="text-sm text-white">Copyright Baby Trump © 2024. All rights reserved</p>
+            <p class="text-sm text-white">Copyright BOBCAT © 2024. All rights reserved</p>
         </div>
     </footer>
 
