--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         <div class="container mx-auto text-center p-5 lg:pb-20">
             <div
                 class="token1 flex flex-col-reverse md:flex-row items-center justify-center lg:justify-start mx-4 md:mx-6 lg:mx-8">
-                <h1 class="token text-5xl lg:text-7xl font-extrabold mb-8 text-white ">Roadmap</h1>
+                <h1 class="token text-5xl lg:text-7xl font-extrabold mb-8 text-white ">Partners</h1>
                 <img class="w-32 md:w-42 lg:w-64 px-5" src="images/partner.png" alt="">
             </div>
 
@@ -308,10 +308,11 @@
                         <div
                             class="flex flex-col justify-center items-center border-4 rounded-lg m-4 lg:m-10 p-10 transform hover:scale-110 transition duration-200">
                             <div class="flex justify-center items-center">
-                                <img class="w-32 lg:w-64 " src="images/partners/pink.png" alt="">
+                                <img class="w-32 lg:w-64 " src="images/Screenshot_20240403-165032-removebg-preview.png"
+                                    alt="">
                             </div>
                             <div class="flex justify-center items-center">
-                                <p class="text-3xl lg:text-7xl text-white">PinkSale
+                                <p class="text-3xl lg:text-7xl text-white"> DEXtools
 
                                 </p>
                             </div>
@@ -324,7 +325,7 @@
                         <div
                             class="flex flex-col justify-center items-center border-4 rounded-lg m-4 lg:m-10 p-10 transform hover:scale-110 transition duration-200">
                             <div class="flex justify-center items-center">
-                                <img class="w-32 lg:w-64 " src="images/partners/dex.png" alt="">
+                                <img class="w-32 lg:w-64 " src="images/images__27_-removebg-preview.png" alt="">
                             </div>
                             <div class="flex justify-center items-center">
                                 <p class="text-3xl lg:text-7xl text-white">DEXView</p>
