--- a/index.html
+++ b/index.html
@@ -291,6 +291,32 @@
         </div>
     </section>
 
+    <section id="tokenomics" class=" text-white py-16">
+        <div class="container mx-auto text-center">
+            <div class="token1 flex flex-col-reverse md:flex-row md:items-center justify-start mx-4 md:mx-6 lg:mx-8">
+                <h1 class="token text-5xl lg:text-7xl font-extrabold mb-8 text-white ">ROADMAP</h1>
+                <img class="w-32 md:w-42 lg:w-64 px-5" src="images/tok.svg" alt="">
+            </div>
+            <div class="grid grid-cols-1 md:grid-cols-1 lg:grid-cols-3 gap-8 m-10 align-middle ">
+                <!-- Total Supply -->
+                <div class="token1 p-6 border-4 border-white rounded-lg shadow-2xl">
+                    <h1 class="text-3xl font-bold mb-4 text-white">Phase 1</h1>
+                    <p class="tok pt-5">Build the $BYTE Community
+
+                        Onboard KOLs and Marketing plans
+
+                        Launch On Sol Blockchain </p>
+                </div>
+                <!-- Initial Liquidity -->
+                <div class="token2 p-6 border-4 border-white rounded-lg shadow-md">
+                    <h1 class="text-3xl font-bold mb-4 text-white">Phase 2</h1>
+                    <p class="tok   pt-5">$BOB Public Presale
+
+                        $BOB Launch
+
+                        1000 Holders Milestone</p>
+                </div>
+    </section>
     <!-- partners section -->
     <section id="partners">
         <div class="container mx-auto text-center p-5 lg:pb-20">
