--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                 <!-- Total Supply -->
                 <div class="token1 p-6 border-4 border-white rounded-lg shadow-2xl">
                     <h1 class="text-3xl font-bold mb-4 text-white">Phase 1</h1>
-                    <p class="tok pt-5">Build the $BYTE Community
+                    <p class="tok pt-5">Build the $BOB Community
 
                         Onboard KOLs and Marketing plans
 
