--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BOBCAT</title>
+    <title>Metacatz</title>
     <!-- Add your CSS framework, e.g., CDN link for Tailwind CSS -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 
@@ -36,7 +36,7 @@
                     style="background-image: linear-gradient(to right, rgb(150, 24, 182), violet);
                 color: transparent;
                 -webkit-background-clip: text; /* For Safari and older versions of Chrome */
-                background-clip: text;">BOBCAT</span>
+                background-clip: text;">Metacatz</span>
             </a>
             <button data-collapse-toggle="navbar-default" type="button" style="color: cyan;"
                 class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-white rounded-sm md:hidden hover:bg-cyan-500  "
@@ -74,6 +74,11 @@
                             <i class="bx bx-map-alt"></i> ROADMAP</a>
                     </li>
                     <li>
+                        <a href="#partners"
+                            class="violet block py-2 px-3 text-white text-lg lg:text-xl rounded hover:text-pink-500 md:hover:bg-transparent md:border-0 md:hover:text-pink-500 md:p-0  ">
+                            <i class="bx bx-map-alt"></i> NFT DAPP</a>
+                    </li>
+                    <li>
                         <a href="#social"
                             class="violet block py-2 px-3 text-white text-lg lg:text-xl rounded hover:text-pink-500 md:hover:bg-transparent md:border-0 md:hover:text-pink-500 md:p-0  ">
                             <i class="bx bx-message-dots"></i> SOCIALS</a>
@@ -108,7 +113,7 @@
                     <span class="text-center text-4xl lg:text-7xl text-cyan-500 glow-text" style="background-image: linear-gradient(to right, cyan, violet);
                     color: transparent;
                     -webkit-background-clip: text;
-                    background-clip: text;">BOBCAT</span>
+                    background-clip: text;">Metacatz</span>
                 </h1>
                 <a href=" " class="w-full md:w-1/2 lg:w-1/2">
                     <button type="button"
@@ -211,7 +216,7 @@
     <section id="about" class="shadow-2xl py-16">
         <div class="flex flex-col items-center justify-center mx-5 lg:mx-20 gap-5">
             <p class="text-4xl lg:text-5xl font-extrabold text-center text-white ">Introducing
-                BOBCAT ($BOB)</p>
+                MetaCatz ($CATZ)</p>
             <div class="hero lg:h-screen flex flex-col-reverse justify-between lg:flex-row items-center mx-5 lg:mx-10">
                 <div class="main-logo about-logo w-fill lg:w-1/3 rounded-full mt-8">
                     <img src="images/Bob_cat_20240403-145241_edited-removebg-preview.png" alt="Animated" />
@@ -221,14 +226,11 @@
                         <p
                             class="about-context about-text text-gray-300 mx-2 md:mx-12 text-left md:text-left md:text-xl lg:text-2xl mt-5  flex flex-col">
                             <span>
-                                Bob Cat is a token inspired by both "BOB THE BUILDER" and the popular "POP CAT" is a cat
-                                fun and lighthearted narrative to bring cat lovers all over the world together to share
-                                cat-related content and support cat-related causes.
-                                It's a meme-able twist for pop cat , but Bob cat is not just a fun cat . Just like "Bob
-                                the builder", Bob cat is a cat token that serves as the doctor to other cats .
-                                Bob cat token is an idea to fund cat shelters or other animal welfare initiatives.
-                                Join the Bob cat army now to take care of cats around the world while having so much fun
-                                😊
+                                In the world of meta cat crypto, each cat is represented as a non-fungible token (NFT),
+                                ensuring its uniqueness and scarcity. Owners can participate in breeding to create new
+                                combinations and traits, while also engaging in a vibrant marketplace where these
+                                digital kitties are bought and sold. The community thrives on creativity, speculation,
+                                and the joy of owning these virtual companions.
                             </span>
                         </p>
                     </div>
@@ -253,7 +255,7 @@
                 <!-- Initial Liquidity -->
                 <div class="token2 p-6 border-4 border-white rounded-lg shadow-md">
                     <h1 class="text-3xl font-bold mb-4 text-white">Tax</h1>
-                    <p class="tok   pt-5">0/0</p>
+                    <p class="tok   pt-5">5/5</p>
                 </div>
                 <!-- addd -->
                 <div class="token3 p-6 border-4 border-white rounded-lg shadow-md">
@@ -301,20 +303,21 @@
                 <!-- Total Supply -->
                 <div class="token1 p-6 border-4 border-white rounded-lg shadow-2xl">
                     <h1 class="text-3xl font-bold mb-4 text-white">Phase 1</h1>
-                    <p class="tok pt-5">Build the $BOB Community
+                    <p class="tok pt-5">Build the $CATZ Community</p>
 
-                        Onboard KOLs and Marketing plans
+                    <p1> Onboard KOLs and Marketing plans</p1>
 
-                        Launch On Sol Blockchain </p>
+                    <p2>Launch On base Blockchain</p2>
                 </div>
                 <!-- Initial Liquidity -->
                 <div class="token2 p-6 border-4 border-white rounded-lg shadow-md">
                     <h1 class="text-3xl font-bold mb-4 text-white">Phase 2</h1>
-                    <p class="tok   pt-5">$BOB Public Presale
+                    <p class="tok   pt-5">
 
-                        $BOB Launch
+                        $CATZ Launch</p>
 
-                        1000 Holders Milestone</p>
+                    <p1>1000 Holders</p1> Milestone</p>
+                    <p2>NFT minting dapp launch</p>
                 </div>
     </section>
     <!-- partners section -->
